--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   },
