--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -5,14 +5,14 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
     "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
+    "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   },
